bon/tests/integration/ui/compile_fail/set_macro.stderr
error: duplicate map key
  --> tests/integration/ui/compile_fail/set_macro.rs:14:9
   |
14 |         "Hello", "Mars",
   |         ^^^^^^^

warning: unused variable: `strings`
 --> tests/integration/ui/compile_fail/set_macro.rs:5:9
  |
5 |     let strings: HashSet<u64> = set! {
  |         ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_strings`
  |
  = note: `#[warn(unused_variables)]` on by default
